css/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  text-decoration: none;
}

* {
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

html {
  scroll-behavior: smooth;
}

/* website palette
191919
2D4263
C84B31
ECDBBA
FAF9F6

rainbow palette
98DDCA
D5ECC2
FFD3B4
FFAAA7
 */

@keyframes shake {
  0% {
    transform: translate(0px, 0px) rotate(0deg);
  }

  30% {
    transform: translate(-3px, -3px) rotate(-10deg);
  }

  60% {
    transform: translate(3px, 3px) rotate(-5deg);
  }

  90% {
    transform: translate(-3px, -3px) rotate(0deg);
  }
}

/* navbar styling */

.navbar {
  position: fixed;
  width: 100%;
  padding: 15px 0;
  /* font-family: 'Noto Sans SC', sans-serif; */
  font-family: 'STZhongsong';
  transition: all 0.3s ease;
}

.navbar.sticky {
  padding: 5px 0;
  background: #191919;
  z-index: 10;
}

.max-width {
  max-width: 1920px;
  padding: 0 80px;
  margin: auto;
}

.navbar .max-width {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.navbar .logo a img {
  padding-top: 10px;
  width: 40px;
  transition: all 0.3s ease;
  filter: invert(100%);
  /* filter: invert(100%) */
}

.navbar .logo a img:hover {
  /* filter: invert(33%) sepia(37%) saturate(4695%) hue-rotate(351deg) brightness(88%) contrast(75%); */
  transition: none;
  animation: shake 0.6s;
  animation-iteration-count: 1;
}

.navbar .logo a img.sticky {
  padding-top: 10px;
  width: 40px;
  /* filter: invert(100%) */
  filter: invert(94%) sepia(10%) saturate(845%) hue-rotate(338deg)
    brightness(97%) contrast(90%);
  transition: none;
}

.navbar .logo a img.sticky:hover {
  /* filter: invert(33%) sepia(37%) saturate(4695%) hue-rotate(351deg) brightness(88%) contrast(75%); */
  transition: none;
}

.navbar .logo a {
  color: #191919;
  font-size: 35px;
  font-weight: 500;
}

/* .navbar .logo a.sticky {
    color: #FAF9F6;
    font-size: 35px;
    font-weight:500;
    
} */

.home .rainbow {
  animation: color-change 8s infinite;
  /* background: linear-gradient(to right, #98DDCA, #D5ECC2, #FFD3B4, #FFAAA7);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent; */
}

@keyframes color-change {
  0% {
    color: #191919;
  }

  25% {
    color: hsl(204, 66%, 59%);
  }

  50% {
    color: #a3db5a;
  }

  75% {
    color: #c84b31;
  }
}

.navbar .menu li {
  list-style: none;
  display: inline-block;
}

.navbar .menu li a {
  color: #faf9f6;
  font-size: 18px;
  font-weight: 500;
  margin-left: 25px;
  transition: all 0.3s ease;
}

.navbar .menu li a.sticky {
  color: #faf9f6;
}

.navbar .menu li a:hover {
  color: #c84b31;
}

/* menu button styling */

.menu-btn {
  color: #faf9f6;
  font-size: 23px;
  cursor: pointer;
  display: none;
}

/* home section styling */

.home {
  display: flex;
  background: url('../img/fakurian-design-MBgK-AHSrVs-unsplash-small.jpg')
    no-repeat center;
  background-size: cover;
  height: 100vh;
  color: #191919;
  min-height: 500px;
  font-family: 'STZhongsong', sans-serif;
}

.home .max-width {
  margin: auto auto auto 1200px;
}

.home .home-content .text-1 {
  font-size: 27px;
}

.home .home-content .text-2 {
  font-size: 75px;
  font-weight: 600;
  margin-left: -3px;
}

.home .home-content .text-3 {
  font-size: 40px;
  margin: 5px 0;
}

.home .home-content .text-3 span {
  color: #c84b31;
}

.home .home-content a {
  display: inline-block;
  background: #191919;
  color: #faf9f6;
  font-size: 25px;
  padding: 12px 30px;
  margin-top: 10px;
  border-radius: 6px;
  border: 3px solid #191919;
  transition: all 0.3s ease;
}

.home .home-content a:hover {
  border: 3px solid #191919;
  color: #191919;
  background: none;
}

/* all similar styling */
section.about,
section.interests,
.skills,
.hobbies,
.music,
footer {
  font-family: 'STZhongsong';
}

section {
  padding: 100px 0;
}

section .title {
  color: #191919;
  position: relative;
  text-align: center;
  font-size: 40px;
  font-weight: 500;
  margin-bottom: 60px;
  padding-bottom: 20px;
}

section .title::before {
  content: '';
  position: absolute;
  bottom: 0px;
  left: 50%;
  width: 180px;
  height: 3px;
  background: #191919;
  transform: translateX(-50%);
}

section .title::after {
  position: absolute;
  color: #c84b31;
  bottom: -12px;
  left: 50%;
  font-size: 16px;
  padding: 5px;
  background: white;
  transform: translateX(-50%);
}

.more-btn-about,
.more-btn-skills {
  display: inline-block;
  background: #191919;
  color: #faf9f6;
  font-size: 20px;
  font-weight: 500;
  padding: 10px 20px;
  margin-top: 20px;
  margin-bottom: 20px;
  border-radius: 6px;
  border: 2px solid #191919;
  transition: all 0.3s ease;
  font-family: 'STZhongsong';
}

.more-btn-about:hover,
.more-btn-skills:hover {
  border: 2px solid #191919;
  background: none;
  color: #191919;
}

.about .about-content,
.interests .serv-content,
.skills .skills-content,
.music .music-content {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  flex-wrap: wrap;
}

.interests,
.hobbies {
  background-color: #191919;
}

.interests .title,
.hobbies .title {
  color: #faf9f6;
}

.interests .title::before,
.hobbies .title::before {
  background: #faf9f6;
}

/* about section styling */

.about .title::after {
  content: '关于';
}

.about .about-content .left {
  width: 30%;
  /* margin-left: 200px; */
}

.about .about-content .left img {
  height: 500px;
  width: 500px;
  object-fit: cover;
  border-radius: 10px;
}

.about .about-content .right {
  width: 40%;
  /* margin-right: 200px; */
}

.about .about-content .right .text {
  font-size: 30px;
  font-weight: 600;
  margin-top: 20px;
  margin-bottom: 20px;
}

.about .about-content .right .more {
  height: 0;
  overflow: hidden;
  opacity: 0;
  transition: all 2s ease;
}

.about .about-content .right br.more {
  display: none;
}

.about .about-content .right .more.active {
  display: block;
  height: auto;
  opacity: 1;
  transition: all 2s ease;
}
/* ... */

